recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:8: error: value -- is not a member of Int
		spiral(steps--, angle, length+increment, increment);
                            ^